--- a/manuscripts/23-tutorial-don-dags/causal-tutorial-env.tex
+++ b/manuscripts/23-tutorial-don-dags/causal-tutorial-env.tex
@@ -259,7 +259,7 @@ Speech and Hearing
       
 
 
-\date{2024-06-05}
+\date{2024-10-04}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -287,8 +287,8 @@ Although randomised controlled trials (experiments), when performed
 correctly, ensure no unmeasured confounding, experiments face
 limitations of cost, practicality, ethics, and generalisability.
 Experiments are also subject to confounding biases
-(\citeproc{ref-bulbulia_2024_experiments}{Bulbulia 2024c};
-\citeproc{ref-hernan2017per}{Hernán \emph{et al.} 2017};
+(\citeproc{ref-bulbulia_2024_experiments}{Bulbulia 2024e};
+\citeproc{ref-hernan2017per}{Hernán and Robins 2017};
 \citeproc{ref-montgomery2018}{Montgomery \emph{et al.} 2018}).
 Observational data, which are more readily available, offer alternatives
 -- provided that the causal inferences we draw are valid. Regrettably,
@@ -310,7 +310,7 @@ assumptions}} necessary for causal inferences
 (\citeproc{ref-hernan2023}{Hernan and Robins 2023}). Here, we discover
 that causal inference hinges on our ability to use data to compute
 contrasts between \emph{counterfactual} outcomes
-(\citeproc{ref-hernan2017per}{Hernán \emph{et al.} 2017};
+(\citeproc{ref-hernan2017per}{Hernán and Robins 2017};
 \citeproc{ref-robins2008estimation}{Robins and Hernan 2008};
 \citeproc{ref-westreich2012berkson}{Westreich 2012};
 \citeproc{ref-westreich2015}{Westreich \emph{et al.} 2015}).
@@ -332,12 +332,12 @@ Causal Inference}\label{section-part1}
 
 The potential outcomes framework for causal inference originated in the
 work of Jerzy Neyman to evaluate the effectiveness of agricultural
-experiments (\citeproc{ref-neyman1923}{Splawa-Neyman 1990}). It was
-later extended by Harvard statistician Donald Rubin, who demonstrated
-the framework may also facilitate causal inferences in non-experimental
-settings (\citeproc{ref-rubin1976}{Rubin 1976}). Jamie Robins further
-generalised this framework to assess confounding in complex scenarios
-involving multiple and time-varying treatments
+experiments (\citeproc{ref-neyman1923}{Splawa-Neyman 1990 (orig.
+1923)}). It was later extended by Harvard statistician Donald Rubin, who
+demonstrated the framework may also facilitate causal inferences in
+non-experimental settings (\citeproc{ref-rubin1976}{Rubin 1976}). Jamie
+Robins further generalised this framework to assess confounding in
+complex scenarios involving multiple and time-varying treatments
 (\citeproc{ref-robins1986}{Robins 1986}).
 
 A fundamental principle in the potential outcomes framework is the
@@ -930,7 +930,7 @@ If investigating the \emph{total} causal effect of \(A\to C\),
 
 \textbf{Important note:} Assessing causal mediation requires further
 assumptions, which we will not discuss here
-(\citeproc{ref-bulbulia2024swigstime}{Bulbulia 2024b};
+(\citeproc{ref-bulbulia2024swigstime}{Bulbulia 2024c};
 \citeproc{ref-vanderweele2015}{VanderWeele 2015}).
 
 \paragraph{Causal Structure 4: The Collider Structure: A Common
@@ -1118,7 +1118,7 @@ reporting coefficients other than the association between \(A \to Y\) is
 typically ill-advised; see Westreich and Greenland
 (\citeproc{ref-westreich2013}{2013}); McElreath
 (\citeproc{ref-mcelreath2020}{2020}); Bulbulia
-(\citeproc{ref-bulbulia2023}{2023}).
+(\citeproc{ref-bulbulia2023}{2024b}).
 
 \paragraph{Second, draw the most recent common causes of the exposure
 and
@@ -1169,7 +1169,7 @@ Focus on whether paths exist, not their functional form (linear,
 non-linear, etc.). Parametric descriptions are not relevant for bias
 evaluation in a causal diagram. (For an explanation of causal
 interaction and diagrams, see: Bulbulia
-(\citeproc{ref-bulbulia2023}{2023}).)
+(\citeproc{ref-bulbulia2023}{2024b}).)
 
 \paragraph{Eighth, minimise paths to those necessary for the
 identification
@@ -1234,7 +1234,7 @@ the symbols and conventions we use in this chapter.
 
 \caption{\label{tbl-01}Terminology used in this article for causal
 diagrams. The graph is adapted from
-(\citeproc{ref-bulbulia2023}{Bulbulia 2023}).}
+(\citeproc{ref-bulbulia2023}{Bulbulia 2024b}).}
 
 \centering{
 
@@ -1252,7 +1252,7 @@ the basic conventions that we employ in this chapter.
 \begin{table}
 
 \caption{\label{tbl-02}Basic conventions for causal diagrams (adapted
-from (\citeproc{ref-bulbulia2023}{Bulbulia 2023})).}
+from (\citeproc{ref-bulbulia2023}{Bulbulia 2024b})).}
 
 \centering{
 
@@ -1275,7 +1275,7 @@ results. Each example refers to a row in the table.
 \begin{table}
 
 \caption{\label{tbl-04}Worked examples: This table is adapted from
-(\citeproc{ref-bulbulia2023}{Bulbulia 2023}).}
+(\citeproc{ref-bulbulia2023}{Bulbulia 2024b}).}
 
 \centering{
 
@@ -1524,7 +1524,7 @@ treatment in the data; see Hernán \emph{et al.}
 (\citeproc{ref-hernuxe1n2016}{2016}); Danaei \emph{et al.}
 (\citeproc{ref-danaei2012}{2012}); VanderWeele \emph{et al.}
 (\citeproc{ref-vanderweele2020}{2020}); Bulbulia
-(\citeproc{ref-bulbulia2022}{2022}). Without controlling for the
+(\citeproc{ref-bulbulia2022}{2023}). Without controlling for the
 baseline treatment, we could only estimate a ``prevalent exposure
 effect.'' If the initial exposure caused people some people to be
 miserable, we would not be able to track this outcome. The prevalent
@@ -1653,7 +1653,7 @@ of the treatment and outcome).
 \begin{table}
 
 \caption{\label{tbl-cs}This table is adapted from
-(\citeproc{ref-bulbulia2023}{Bulbulia 2023})}
+(\citeproc{ref-bulbulia2023}{Bulbulia 2024b})}
 
 \centering{
 
@@ -1842,7 +1842,7 @@ our confounding control strategy.
 \begin{table}
 
 \caption{\label{tbl-lg}This table is adapted from
-(\citeproc{ref-bulbulia2023}{Bulbulia 2023})}
+(\citeproc{ref-bulbulia2023}{Bulbulia 2024b})}
 
 \centering{
 
@@ -2043,7 +2043,7 @@ disassociated through conditioning on nodes within basic structures
 enable the use of causal diagrams for addressing complex problems of
 time-varying confounding, for population restriction biases, and for
 measurement error (refer to Bulbulia
-(\citeproc{ref-bulbulia2024swigstime}{2024b}); Bulbulia
+(\citeproc{ref-bulbulia2024swigstime}{2024c}); Bulbulia
 (\citeproc{ref-bulbulia2024wierd}{2024d})).
 
 We hope this chapter will inspire environmental psychologists to deepen
@@ -2075,33 +2075,37 @@ draft. Both authors contributed substantially to the final work.
 
 \phantomsection\label{refs}
 \begin{CSLReferences}{1}{0}
+\bibitem[\citeproctext]{ref-bulbulia2022}
+Bulbulia, JA (2023) A workflow for causal inference in cross-cultural
+psychology. \emph{Religion, Brain \& Behavior}, \textbf{13}(3),
+291--306.
+doi:\href{https://doi.org/10.1080/2153599X.2022.2070245}{10.1080/2153599X.2022.2070245}.
+
 \bibitem[\citeproctext]{ref-bulbulia2024PRACTICAL}
-Bulbulia, J (2024a) A practical guide to causal inference in three-wave
+Bulbulia, JA (2024a) A practical guide to causal inference in three-wave
 panel studies. \emph{PsyArXiv Preprints}.
 doi:\href{https://doi.org/10.31234/osf.io/uyg3d}{10.31234/osf.io/uyg3d}.
 
-\bibitem[\citeproctext]{ref-bulbulia2024swigstime}
-Bulbulia, J (2024b) Causal inference for interaction, mediation, and
-time-varying treatments. \emph{PsyArXiv}.
-doi:\href{https://doi.org/10.31234/osf.io/vr268}{10.31234/osf.io/vr268}.
+\bibitem[\citeproctext]{ref-bulbulia2023}
+Bulbulia, JA (2024b) Methods in causal inference part 1: Causal diagrams
+and confounding. \emph{Evolutionary Human Sciences}, \textbf{6}.
+Retrieved from \url{https://osf.io/b23k7}
 
-\bibitem[\citeproctext]{ref-bulbulia_2024_experiments}
-Bulbulia, J (2024c) Confounding in experiments. \emph{PsyArXiv}.
-doi:\href{https://doi.org/10.31234/osf.io/6rnj5}{10.31234/osf.io/6rnj5}.
+\bibitem[\citeproctext]{ref-bulbulia2024swigstime}
+Bulbulia, JA (2024c) Methods in causal inference part 2: Interaction,
+mediation, and time-varying treatments. \emph{Evolutionary Human
+Sciences}, \textbf{6}. Retrieved from
+\url{https://osf.io/preprints/psyarxiv/vr268}
 
 \bibitem[\citeproctext]{ref-bulbulia2024wierd}
-Bulbulia, J (2024d) The weirdest causal inferences in the world.
-\emph{PsyArXiv}.
-doi:\href{https://doi.org/10.31234/osf.io/kj7rv}{10.31234/osf.io/kj7rv}.
+Bulbulia, JA (2024d) Methods in causal inference part 3: Measurement
+error and external validity threats. \emph{Evolutionary Human Sciences},
+\textbf{6}. Retrieved from \url{https://osf.io/preprints/psyarxiv/kj7rv}
 
-\bibitem[\citeproctext]{ref-bulbulia2022}
-Bulbulia, JA (2022) A workflow for causal inference in cross-cultural
-psychology. \emph{Religion, Brain \& Behavior}, \textbf{0}(0), 1--16.
-doi:\href{https://doi.org/10.1080/2153599X.2022.2070245}{10.1080/2153599X.2022.2070245}.
-
-\bibitem[\citeproctext]{ref-bulbulia2023}
-Bulbulia, JA (2023) Causal diagrams (directed acyclic graphs): A
-practical guide.
+\bibitem[\citeproctext]{ref-bulbulia_2024_experiments}
+Bulbulia, JA (2024e) Methods in causal inference part 4: Confounding in
+experiments. \emph{Evolutionary Human Sciences}, \textbf{6}. Retrieved
+from \url{https://osf.io/preprints/psyarxiv/6rnj5}
 
 \bibitem[\citeproctext]{ref-bulbulia2023a}
 Bulbulia, JA, Afzali, MU, Yogeeswaran, K, and Sibley, CG (2023)
@@ -2153,7 +2157,7 @@ collider. \emph{BMJ}, \textbf{381}, p1135.
 doi:\href{https://doi.org/10.1136/bmj.p1135}{10.1136/bmj.p1135}.
 
 \bibitem[\citeproctext]{ref-hernan2017per}
-Hernán, MA, Robins, JM, et al. (2017) Per-protocol analyses of pragmatic
+Hernán, MA, and Robins, JM (2017) Per-protocol analyses of pragmatic
 trials. \emph{N Engl J Med}, \textbf{377}(14), 1391--1398.
 
 \bibitem[\citeproctext]{ref-hernuxe1n2016}
@@ -2185,7 +2189,7 @@ understanding of plant intelligence and behavior}, Simon; Schuster.
 
 \bibitem[\citeproctext]{ref-mcelreath2020}
 McElreath, R (2020) \emph{Statistical rethinking: A {B}ayesian course
-with examples in r and stan}, CRC press.
+with examples in {R} and {S}tan}, CRC press.
 
 \bibitem[\citeproctext]{ref-montgomery2018}
 Montgomery, JM, Nyhan, B, and Torres, M (2018) How conditioning on
@@ -2238,9 +2242,9 @@ Journal}}, \textbf{13}, 570--580.
 doi:\href{https://doi.org/10.32614/RJ-2021-053}{10.32614/RJ-2021-053}.
 
 \bibitem[\citeproctext]{ref-neyman1923}
-Splawa-Neyman (1990) On the application of probability theory to
-agricultural experiments. Essay on principles. Section 9. \emph{English
-Translation with Discussion, Statistical Science}, 463--480.
+Splawa-Neyman, J (1990 (orig. 1923)) On the application of probability
+theory to agricultural experiments. Essay on principles. Section 9.
+(1923). \emph{Statistical Science}, \textbf{5}(4), 465--472.
 
 \bibitem[\citeproctext]{ref-grf2024}
 Tibshirani, J, Athey, S, Sverdrup, E, and Wager, S (2024) \emph{Grf:
@@ -2267,7 +2271,7 @@ VanderWeele, TJ (2019) Principles of confounder selection.
 
 \bibitem[\citeproctext]{ref-vanderweele2017}
 VanderWeele, TJ, and Ding, P (2017) Sensitivity analysis in
-observational research: Introducing the e-value. \emph{Annals of
+observational research: Introducing the {E}-value. \emph{Annals of
 Internal Medicine}, \textbf{167}(4), 268--274.
 doi:\href{https://doi.org/10.7326/M16-2607}{10.7326/M16-2607}.
 
@@ -2280,12 +2284,6 @@ versions of treatment. \emph{Journal of Causal Inference},
 VanderWeele, TJ, Mathur, MB, and Chen, Y (2020) Outcome-wide
 longitudinal designs for causal inference: A new template for empirical
 studies. \emph{Statistical Science}, \textbf{35}(3), 437--466.
-
-\bibitem[\citeproctext]{ref-vanderweele2022b}
-VanderWeele, TJ, and Vansteelandt, S (2022) A statistical test to reject
-the structural interpretation of a latent factor model. \emph{Journal of
-the Royal Statistical Society Series B: Statistical Methodology},
-\textbf{84}(5), 2032--2054.
 
 \bibitem[\citeproctext]{ref-westreich2012berkson}
 Westreich, D (2012) Berkson's bias, selection bias, and missing data.
@@ -2471,9 +2469,8 @@ their corresponding uncertainties in the data. Statistical models
 typically correspond to multiple causal structures
 (\citeproc{ref-hernan2023}{Hernan and Robins 2023};
 \citeproc{ref-pearl2018}{Pearl and Mackenzie 2018};
-\citeproc{ref-vanderweele2022b}{VanderWeele and Vansteelandt 2022}).
-That is, the causes of such covariances cannot be identified without
-assumptions.
+\citeproc{ref-vanderweele2022b}{\textbf{vanderweele2022b?}}). That is,
+the causes of such covariances cannot be identified without assumptions.
 
 \textbf{Structural model:} defines assumptions about causal
 relationships. Causal diagrams graphically encode these assumptions
